[project]
name = "ssmdevices"
version = "0.22.1"
description = "a collection of lab automation drivers implemented with labbench"

authors = [
    {name="Dan Kuester", email = "daniel.kuester@nist.gov"},
    {name="Keith Forsyth", email = "keith.forsyth@nist.gov"},
    {name="Duncan McGillivray", email = "duncan.a.mcgillivray@nist.gov"},
    {name="Yao Ma", email = "yao.ma@nist.gov"},
    {name="John Ladbury", email = "john.ladbury@nist.gov"},
    {name="Paul Blanchard" },
    {name="Alex Curtin" },
    {name="Ryan Jacobs" },
    {name="Andre Rosete"},
    {name="Audrey Puls"},
    {name="Michael Voecks" },
]

maintainers = [
    {name = "Dan Kuester", email = "daniel.kuester@nist.gov"},
]

dependencies = [
    "labbench =~ 0.35.0",
    "hidapi",
    "pywifi",
    "brainstem>=2.9.26",
]

requires-python = ">=3.9,<3.13"
readme = "README.md"
license = {file = "LICENSE.md"}

[project.urls]
homepage = "https://github.com/usnistgov/ssmdevices"
repository = "https://github.com/usnistgov/ssmdevices"
documentation = "https://pages.nist.gov/ssmdevices"

[project.optional-dependencies]
dev = ["labbench[dev]"]
doc = ["labbench[doc]"]


[build-system]
requires = [
    "pdm-pep517>=1.0",
]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.version]
source = "scm"
write_to = "ssmdevices/_version.py"
write_template = "__version__ = '{}'"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.pdm.scripts]
doc-html = {cmd = "sphinx-build -b html doc doc/html"}
doc-latex = {cmd = "sphinx-build -b latex doc doc/latex"}
doc-pdf = {cmd = "pdflatex doc/latex/ssmdevices-api.tex --output-directory=doc", env = {"TEXINPUTS" = "doc/latex"}}
doc-rst = {cmd = "sphinx-apidoc -F . -o doc/rst"}